--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chance": "^1.0.2",
     "express": "^4.13.4",
     "md5": "^2.1.0",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
