--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "body-parser": "^1.15.2",
     "chance": "^1.0.2",
     "express": "^4.13.4",
-    "md5": "^2.1.0",
-    "moment": "^2.24.0",
-    "morgan": "^1.9.1"
+    "md5": "^2.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "moment": "^2.24.0",
+    "morgan": "^1.9.1"
   }
 }
